# misipwgen

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  README.md  fly.toml  misipwgen.py  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  syllables.csv  webapp.py
.github/workflows/: ci.yml  deploy-docs.md  deploy-fly.yml  deploy-railway.yml  deploy-render.yml  publish-testpypi.yml  publish.yml
misipwgen/: __init__.py  __main__.py  cumulative.py  generator_v2.py  it_syllables.csv  misipwgen.py  settings.py  syllable.py  syllable_collection.py  syllables.csv  syllables_loader.py
misipwgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
misipwgen/data/es/: syllables_v2.py
misipwgen/data/it/: syllables.csv  syllables_v2.csv  syllables_v2.py
misipwgen/lang/: core.py
scripts/: build_syllables.py  csv_v2_to_py.py
static/: style.css
templates/: index.html
tests/: test_build_syllables.py  test_cumulative.py  test_generator_v2.py  test_lang_core.py  test_main.py  test_misipwgen.py  test_phrase_sentence.py  test_syllable.py  test_syllable_collection.py  test_syllables_loader.py
tests/fixtures/: syllables.csv  syllables2.csv  test_syllables_v2.py
utils/: cumulative.py  syllable.py  syllables.py  syllables_loader.py
